--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=http://api.puzzlesbot.online/
 REACT_APP_BOT_URL=https://t.me/test_dev_123456bot/sdfsd234sdfsersbot
+REACT_APP_BOT_TOKEN=7102705599:AAF3mO6jObqN5V5YF0i0OMM-BMha_t_aUBQ
