--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.7.7",
+    "env-cmd": "^10.1.0",
     "eruda": "^3.3.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -24,8 +25,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f ./.env.development react-scripts start",
+    "start:prod": "env-cmd -f ./.env.production react-scripts start",
+    "build": "env-cmd -f ./.env.development react-scripts build",
+    "build:prod": "env-cmd -f ./.env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
