--- a/src/config/config.json
+++ b/src/config/config.json
@@ -97,7 +97,7 @@
     {
       "slug": "light",
       "name": "Liora",
-      "title": "The warrior queen of valor",
+      "title": "The Warrior Queen of Valor",
       "description": "An enchanting mage, conjuring sharp shards of frost.",
       "type": "light",
       "level": [
