--- a/src/config/config.json
+++ b/src/config/config.json
@@ -366,6 +366,45 @@
         { "cost": 889549, "profit": 23641, "increase": 6359 },
         { "cost": 983203, "profit": 30000, "increase": 0 }
       ]
+    },
+    {
+      "slug": "drekthar",
+      "name": "Drekthar",
+      "title": "The Skullcrusher",
+      "description": "A savage leader, feared by all for his merciless ways.",
+      "type": "dark",
+      "level": [
+        { "cost": 5000, "profit": 72, "increase": 21 },
+        { "cost": 3317, "profit": 93, "increase": 25 },
+        { "cost": 15719, "profit": 118, "increase": 32 },
+        { "cost": 39280, "profit": 150, "increase": 40 },
+        { "cost": 122942, "profit": 190, "increase": 51 },
+        { "cost": 264261, "profit": 241, "increase": 65 },
+        { "cost": 359690, "profit": 306, "increase": 82 },
+        { "cost": 469800, "profit": 388, "increase": 106 },
+        { "cost": 594591, "profit": 494, "increase": 132 },
+        { "cost": 734061, "profit": 626, "increase": 169 },
+        { "cost": 888216, "profit": 795, "increase": 213 },
+        { "cost": 1057049, "profit": 1008, "increase": 272 },
+        { "cost": 1240567, "profit": 1280, "increase": 345 },
+        { "cost": 1438763, "profit": 1626, "increase": 437 },
+        { "cost": 1651640, "profit": 2062, "increase": 556 },
+        { "cost": 1879199, "profit": 2618, "increase": 704 },
+        { "cost": 2121440, "profit": 3322, "increase": 894 },
+        { "cost": 2378362, "profit": 4216, "increase": 1133 },
+        { "cost": 2649966, "profit": 5349, "increase": 1439 },
+        { "cost": 2936252, "profit": 6788, "increase": 1826 },
+        { "cost": 3237215, "profit": 8614, "increase": 2317 },
+        { "cost": 3552864, "profit": 10931, "increase": 2940 },
+        { "cost": 3883190, "profit": 13871, "increase": 3732 },
+        { "cost": 4228198, "profit": 17603, "increase": 4733 },
+        { "cost": 4587892, "profit": 22337, "increase": 6009 },
+        { "cost": 4962263, "profit": 28346, "increase": 7623 },
+        { "cost": 5351316, "profit": 35969, "increase": 9674 },
+        { "cost": 5755051, "profit": 45644, "increase": 12277 },
+        { "cost": 6173467, "profit": 57921, "increase": 15579 },
+        { "cost": 7423429, "profit": 73500, "increase": 0 }
+      ]
     }
   ],
   "heroType": {
