--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "env-cmd": "^10.1.0",
     "eruda": "^3.3.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
