--- a/src/config/config.json
+++ b/src/config/config.json
@@ -600,6 +600,40 @@
         "targetCard": "splash",
         "cardLevel": 6
       }
+    },
+    {
+      "slug": "willow",
+      "name": "Willow",
+      "title": "The Wildling",
+      "description": "A warrior elf, channeling nature’s power and fury.",
+      "type": "forest",
+      "level": [
+        { "cost": 5000, "profit": 10, "increase": 1 },
+        { "cost": 140, "profit": 11, "increase": 1 },
+        { "cost": 158, "profit": 12, "increase": 1 },
+        { "cost": 185, "profit": 13, "increase": 1 },
+        { "cost": 228, "profit": 14, "increase": 1 },
+        { "cost": 285, "profit": 15, "increase": 1 },
+        { "cost": 403, "profit": 16, "increase": 1 },
+        { "cost": 582, "profit": 17, "increase": 1 },
+        { "cost": 886, "profit": 18, "increase": 1 },
+        { "cost": 1452, "profit": 19, "increase": 1 },
+        { "cost": 2587, "profit": 20, "increase": 1 },
+        { "cost": 4474, "profit": 21, "increase": 2 },
+        { "cost": 8254, "profit": 23, "increase": 1 },
+        { "cost": 16876, "profit": 24, "increase": 2 },
+        { "cost": 35696, "profit": 26, "increase": 2 },
+        { "cost": 74699, "profit": 28, "increase": 2 },
+        { "cost": 170552, "profit": 30, "increase": 2 },
+        { "cost": 446886, "profit": 32, "increase": 2 },
+        { "cost": 1221335, "profit": 34, "increase": 2 },
+        { "cost": 1887440, "profit": 36, "increase": 0 }
+      ],
+      "condition": {
+        "type": "card",
+        "targetCard": "aegiron",
+        "cardLevel": 11
+      }
     }
   ],
   "heroType": {
