--- a/src/config/config.json
+++ b/src/config/config.json
@@ -634,6 +634,40 @@
         "targetCard": "aegiron",
         "cardLevel": 11
       }
+    },
+    {
+      "slug": "pollen",
+      "name": "Pollen",
+      "title": "The Bloomcaller",
+      "description": "An earthy protector of the wild, calling upon the power of flowers.",
+      "type": "forest",
+      "level": [
+        { "cost": 5000, "profit": 68, "increase": 5 },
+        { "cost": 571, "profit": 73, "increase": 5 },
+        { "cost": 658, "profit": 78, "increase": 6 },
+        { "cost": 796, "profit": 84, "increase": 6 },
+        { "cost": 1010, "profit": 90, "increase": 6 },
+        { "cost": 1347, "profit": 96, "increase": 7 },
+        { "cost": 1887, "profit": 103, "increase": 7 },
+        { "cost": 2778, "profit": 110, "increase": 8 },
+        { "cost": 4299, "profit": 118, "increase": 9 },
+        { "cost": 6989, "profit": 127, "increase": 9 },
+        { "cost": 12030, "profit": 136, "increase": 9 },
+        { "cost": 21507, "profit": 145, "increase": 11 },
+        { "cost": 41358, "profit": 156, "increase": 11 },
+        { "cost": 80368, "profit": 167, "increase": 11 },
+        { "cost": 167121, "profit": 178, "increase": 13 },
+        { "cost": 358268, "profit": 191, "increase": 14 },
+        { "cost": 825741, "profit": 205, "increase": 14 },
+        { "cost": 1852366, "profit": 219, "increase": 16 },
+        { "cost": 4747141, "profit": 235, "increase": 17 },
+        { "cost": 7988224, "profit": 252, "increase": 0 }
+      ],
+      "condition": {
+        "type": "card",
+        "targetCard": "veldar",
+        "cardLevel": 11
+      }
     }
   ],
   "heroType": {
